several bugs fixed

--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
             </div>
         </div>
         <div class="advantages__clouds">
-            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud" loading="lazy"></img>
-            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud" loading="lazy"></img>
-            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud" loading="lazy"></img>
-            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud" loading="lazy"></img>
-            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud" loading="lazy"></img>
-            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud" loading="lazy"></img>
-            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud" loading="lazy"></img>
-            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud" loading="lazy"></img>
-            <img src="imgs/advantages-cloud-2.png" class="advantages__cloud" loading="lazy"></img>
+            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud"></img>
+            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud"></img>
+            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud"></img>
+            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud"></img>
+            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud"></img>
+            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud"></img>
+            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud"></img>
+            <img src="imgs/advantages-cloud-1.png" class="advantages__cloud"></img>
+            <img src="imgs/advantages-cloud-2.png" class="advantages__cloud"></img>
         </div>
     </section>
     <section class="scheme">
