--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="header__wrapper">
         <header class="header">
-            <img src="imgs/header-logo.png" alt="Симфония" class="header__logo">
+            <img src="imgs/svg/header-logo.svg" alt="Симфония" class="header__logo">
             <div class="header__menu invisible">
                 <nav class="header__nav">
                     <a href="#" class="header__nav__element">Квартиры</a>
@@ -101,7 +101,7 @@
         </div>
     </div>
     <section class="screen">
-        <img src="imgs/logo.png" alt="Симфония" class="screen__logo">
+        <img src="imgs/svg/logo.svg" alt="Симфония" class="screen__logo">
         <h1 class="screen__title">ЖК Симфония -<br>гармония<br>ваших будней</h1>
         <div class="screen__desktop">
             <img src="imgs/cloud-1.png" alt="cloud" class="screen__cloud-top parallax" data-rellax-speed="-8">
