a lot of changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="scripts/jquery.inputmask.min.js"></script>
@@ -14,7 +15,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <script src="scripts/index.js"></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <title>Симфония</title>
 </head>
 <body>
@@ -23,11 +23,11 @@
             <img src="imgs/svg/header-logo.svg" alt="Симфония" class="header__logo">
             <div class="header__menu invisible">
                 <nav class="header__nav">
-                    <a href="#" class="header__nav__element">Квартиры</a>
+                    <a href="select-apartment.html" class="header__nav__element">Квартиры</a>
                     <a href="#" class="header__nav__element">Ипотека</a>
                     <a href="#" class="header__nav__element">Новости</a>
                     <a href="building-progress.html" class="header__nav__element">Ход строительства</a>
-                    <a href="#" class="header__nav__element">Контакты</a>
+                    <a href="cantacts.html" class="header__nav__element">Контакты</a>
                 </nav>
                 <div class="header__nav__more-box">
                     <button class="header__nav__more active">. . .</button>
@@ -52,7 +52,7 @@
                 </div>
                 <a href="tel:+74951532643" class="header__tel">+7 (495) 153 26 43</a>
             </div>
-            <a href="catalog.html" class="header__button">Выбрать квартиру</a>
+            <a href="select-apartment.html" class="header__button">Выбрать квартиру</a>
             <button class="header__burger-button">
                 <svg width="41" height="14" viewBox="0 0 41 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 0H41V2H0V0Z" fill="#306079"/>
@@ -72,11 +72,11 @@
                 </svg>  
             </button>
             <nav class="burger__nav">
-                <a href="#" class="burger__nav__element">Квартиры</a>
+                <a href="select-apartment.html" class="burger__nav__element">Квартиры</a>
                 <a href="#" class="burger__nav__element">Ипотека</a>
                 <a href="#" class="burger__nav__element">Новости</a>
                 <a href="building-progress.html" class="burger__nav__element">Ход строительства</a>
-                <a href="#" class="burger__nav__element">Контакты</a>
+                <a href="cantacts.html" class="burger__nav__element">Контакты</a>
                 <a href="#" class="burger__nav__element">Проектная документация</a>
             </nav>
             <p class="footer__text">Офис продаж:<br><b>ул. Ленина корпус 2 оф.360</b></p>
