--- a/cantacts.html
+++ b/cantacts.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/building-progress.css">
-    
+    <link rel="stylesheet" href="styles/contacts.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-    <script src="scripts/building-progress.js"></script>
-    
+    <script src="scripts/contacts.js"></script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
-    <title>Ход строительства</title>
+    <title>Контакты</title>
 </head>
 <body>
     <div class="header__wrapper">
@@ -21,8 +21,8 @@
                     <a href="select-apartment.html" class="header__nav__element">Квартиры</a>
                     <a href="#" class="header__nav__element">Ипотека</a>
                     <a href="#" class="header__nav__element">Новости</a>
-                    <a href="#" class="header__nav__element">Ход строительства</a>
-                    <a href="cantacts.html" class="header__nav__element">Контакты</a>
+                    <a href="building-progress.html" class="header__nav__element">Ход строительства</a>
+                    <a href="#" class="header__nav__element">Контакты</a>
                 </nav>
                 <div class="header__nav__more-box">
                     <button class="header__nav__more active">. . .</button>
@@ -69,8 +69,8 @@
                 <a href="select-apartment.html" class="burger__nav__element">Квартиры</a>
                 <a href="#" class="burger__nav__element">Ипотека</a>
                 <a href="#" class="burger__nav__element">Новости</a>
-                <a href="#" class="burger__nav__element">Ход строительства</a>
-                <a href="cantacts.html" class="burger__nav__element">Контакты</a>
+                <a href="building-progress.html" class="burger__nav__element">Ход строительства</a>
+                <a href="#" class="burger__nav__element">Контакты</a>
                 <a href="#" class="burger__nav__element">Проектная документация</a>
             </nav>
             <p class="footer__text">Офис продаж:<br><b>ул. Ленина корпус 2 оф.360</b></p>
@@ -101,44 +101,54 @@
             </div>
         </div>
     </div>
-    <section class="building">
-        <h1 class="section-title building__title">Ход строительства</h1>
-        <div class="building__month">
-            <h2 class="building__month__title">Ноябрь 2023</h2>
-            <div class="building__month__content">
-                <div class="building__month__column">
-                    <iframe src="https://www.youtube.com/embed/quRp4RTfqTI?si=NfTbkrFhbSi3Dt7w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <div class="building__month__small-box">
-                        <img src="imgs/photo-2.png" alt="img" class="bulding__month__img" data-fancybox="nov23">
-                        <img src="imgs/photo-3.png" alt="img" class="bulding__month__img" data-fancybox="nov23">
-                    </div>
-                </div>
-                <div class="building__month__column">
-                    <div class="building__month__small-box">
-                        <img src="imgs/photo-2.png" alt="img" class="bulding__month__img" data-fancybox="nov23">
-                        <img src="imgs/photo-3.png" alt="img" class="bulding__month__img" data-fancybox="nov23">
-                    </div>
-                    <img src="imgs/photo-1.png" alt="img" data-fancybox="nov23">
+    <section class="contacts">
+        <h1 class="section-title contacts__title">Контакты</h1>
+        <div class="footer__content contacts__menu">
+            <div class="contacts__menu__address">
+                <p class="footer__text contacts__menu__text">Офис продаж:<br><b>ул. Ленина корпус 2 оф.360</b></p>
+            </div>
+            <div class="footer__socials contacts__menu__socials">
+                <p class="footer__text contacts__menu__text">Мы в социальных сетях:</p>
+                <div>
+                    <a href="#" class="footer__socials__element footer__socials__element_vk">
+                        <svg width="30" height="17" viewBox="0 0 30 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5389 2.04669C10.9245 2.22951 11.8242 2.13438 12.1473 3.24902C12.4384 4.25309 12.4265 6.65432 12.2015 7.77201C11.5793 10.8628 8.95285 5.97433 8.30444 4.90049C7.96876 4.34441 7.38474 3.07612 7.12522 2.45732C6.67752 1.38958 5.60416 1.617 4.32488 1.617C3.84363 1.617 3.51875 1.66104 3.06468 1.66009C2.35418 1.65837 0.978882 1.52245 0.978882 2.17556C0.978882 2.67521 1.2652 3.17448 1.48577 3.6078L2.67424 5.95584C2.8819 6.35045 3.07239 6.74602 3.30704 7.13472L3.95276 8.25775C5.65333 11.0343 7.69651 14.2911 10.7562 15.7954C13.0753 16.9356 14.1668 16.9125 16.7095 16.9125C17.1054 16.9125 17.6026 16.6994 17.7401 16.4278C17.9078 16.0964 17.8907 15.5482 17.9273 15.109C18.017 14.0391 18.5426 12.6271 19.8132 13.5C20.4151 13.9137 21.1466 14.8771 21.6959 15.4195C21.9936 15.7133 22.3538 16.098 22.6881 16.329C22.8593 16.4474 23.1428 16.6182 23.3198 16.6927C24.3704 17.135 25.577 16.9122 26.878 16.9125C27.6001 16.9127 28.8588 17.0306 29.4675 16.6371C30.4325 16.0131 29.4675 14.8981 28.9205 14.2057C28.6079 13.8104 27.4023 12.5476 26.9754 12.1759C24.181 9.74298 24.7402 10.1374 27.6354 6.31862C28.2427 5.51738 29.8764 3.41792 29.8764 2.30443C29.8764 1.72071 29.2507 1.67076 28.7824 1.62158C28.5416 1.59641 28.4747 1.65856 28.2269 1.66161C27.4572 1.67114 23.9522 1.5783 23.5137 1.72776C23.2305 1.82441 23.0695 2.11246 22.9544 2.37782C22.3031 3.87735 21.8591 4.91002 20.9251 6.3007C20.547 6.86364 19.336 8.7492 18.578 8.7492C18.0351 8.7492 17.8394 7.67994 17.8394 7.1595C17.8394 5.58105 17.9263 4.141 17.9263 2.60525C17.9263 2.27831 17.8548 1.93555 17.7461 1.70927C17.2712 0.72064 14.685 0.929575 13.4939 0.929575C12.6336 0.929575 11.2465 1.01765 10.7109 1.70107C10.6276 1.80764 10.5543 1.86464 10.5389 2.04669Z" fill="#44565D"/>
+                        </svg>                                    
+                    </a>
+                    <a href="#" class="footer__socials__element footer__socials__element_viber">
+                        <svg width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M24.7053 13.605C24.7004 13.605 24.6945 13.605 24.7411 13.605C24.0298 13.5968 23.5002 13.0545 23.5421 12.4453C23.5684 7.59512 19.1633 3.0786 14.2681 2.91571C13.6082 2.89413 13.0918 2.34125 13.1133 1.68108C13.1361 1.02164 13.6955 0.540955 14.3801 0.524902C20.5786 0.731324 25.9772 6.28984 25.9006 12.4229C25.8922 13.0797 25.3579 13.605 24.7053 13.605ZM14.267 4.52029C18.4855 5.01748 21.89 8.64183 21.8566 12.6001C21.8506 13.2566 21.3163 13.786 20.6611 13.786C20.6576 13.786 20.6541 13.786 20.6503 13.786C19.9904 13.78 19.4598 13.24 19.4658 12.5785C19.4897 9.80508 17.0319 7.25628 14.0337 6.89622C13.3322 6.81986 12.8635 6.25809 12.9401 5.56836C13.0177 4.91127 13.6153 4.43766 14.267 4.52029ZM9.87143 10.7383C9.39202 11.0579 9.19956 11.3615 9.55228 12.1312L11.5179 14.8896C12.3715 15.6971 13.5449 16.6038 14.7593 17.1432C15.4527 17.4518 15.6046 17.2255 15.7648 16.9902C16.4425 15.9823 17.271 15.3783 18.2262 15.1964C19.2423 15.0025 20.3504 15.3113 21.5596 16.1783L21.9378 16.4038C22.5726 16.8966 23.2289 17.3156 23.8565 17.7831L24.2007 18.0462C25.1783 18.7511 26.7171 19.9306 25.8946 22.2112C25.1762 24.2108 22.6778 26.4198 20.2261 26.4198C20.1124 26.4198 19.9977 26.4088 19.8878 26.3789L19.6856 26.3331C19.3904 26.3017 18.9445 26.1702 18.5093 25.9863C10.0651 22.4183 4.08682 16.5196 0.776818 8.45336C0.0870828 6.87863 0.062051 5.34234 0.669253 4.01385C1.30276 2.62866 2.63788 1.5912 4.31029 1.01302C5.08383 0.754542 5.84639 0.7608 6.57812 1.02499C8.24826 1.67709 11.5462 6.103 11.6406 7.80589C11.7339 9.56301 10.4764 10.3337 9.87143 10.7383ZM9.25335 7.93958C9.10869 7.03263 6.58764 3.65741 5.7508 3.27241C5.65158 3.30597 5.58546 3.216 5.44479 3.216C5.32644 3.216 5.20092 3.23995 5.06224 3.28538C3.96012 3.64916 3.23465 4.24621 2.84357 5.01086C2.51961 5.718 2.57711 6.65352 2.9476 7.53408C6.04501 14.9989 11.5927 20.5271 19.4395 23.7814C19.6714 23.8792 19.9619 23.9426 20.195 23.994C20.2554 24.0842 20.2846 24.0146 20.3252 24.023C21.5459 23.9536 23.187 22.6722 23.6437 21.4002C23.8326 20.8771 23.8541 20.7255 22.7663 19.9621C22.6348 19.8625 22.5021 19.7647 22.3742 19.6628C21.7992 19.2084 21.192 18.7932 20.5859 18.433L20.2236 18.0847C19.7335 17.7929 19.1335 17.4611 18.6708 17.5487C18.366 17.6075 18.0551 17.8693 17.7467 18.329C16.8347 19.683 15.3906 20.0481 13.7875 19.3306C11.0634 17.5382 10.3451 16.4362 9.71507 16.0369L7.52842 13.4099C7.48534 13.3488 7.44824 13.2855 7.41831 13.2174C6.29361 10.731 7.71951 9.35043 8.59472 8.74703C9.22106 8.29637 9.26532 8.13475 9.25335 7.93958Z" fill="#44565D"/>
+                        </svg>                                    
+                    </a>
+                    <a href="#" class="footer__socials__element footer__socials__element_whatsapp">
+                        <svg width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M26.6344 13.2383C26.6344 20.2559 20.9332 25.8738 13.8992 25.8738C11.6672 25.8738 9.57041 25.303 7.74498 24.3017L0.695618 26.5418L2.99365 19.7619C1.83517 17.8591 1.1678 15.6241 1.1678 13.238C1.1678 6.25982 6.86771 0.603027 13.9017 0.603027C20.9341 0.604597 26.6344 6.26073 26.6344 13.2383ZM13.8992 2.68406C7.99611 2.68406 3.23156 7.38351 3.23156 13.241C3.23156 15.5661 3.95223 17.7188 5.23383 19.4681L3.89727 23.4121L8.00974 22.1055C9.70139 23.2147 11.7254 23.8618 13.8992 23.8618C19.8232 23.8618 24.6065 19.0961 24.6065 13.2383C24.6065 7.38351 19.8315 2.68406 13.8992 2.68406ZM20.331 16.1491C20.2517 16.0217 20.0435 15.9444 19.7322 15.7883C19.4207 15.632 17.8843 14.8836 17.6001 14.7829C17.3128 14.7101 17.1046 14.6263 16.8964 14.9365C16.6899 15.247 16.0911 15.9444 15.9084 16.1509C15.7269 16.358 15.5451 16.3837 15.2328 16.2302C14.9207 16.074 13.9137 15.7478 12.7209 14.6937C11.7932 13.8715 11.1663 12.8715 10.9854 12.5489C10.802 12.2389 10.9669 12.0717 11.1217 11.9178C11.2614 11.778 11.4335 11.5555 11.59 11.4047C11.7465 11.1935 11.7982 11.066 11.9023 10.8585C12.0046 10.6514 11.9836 10.4711 11.8759 10.3145C11.7982 10.1588 11.175 8.63661 10.9136 8.017C10.6538 7.39739 10.394 7.49961 10.2115 7.49961C10.0297 7.49961 9.82171 7.47449 9.61346 7.47449C9.4053 7.47449 9.06707 7.55134 8.78123 7.86189C8.4954 8.17211 7.6892 8.92079 7.6892 10.4451C7.6892 11.9707 8.80644 13.4979 8.96295 13.6478C9.12021 13.892 11.1316 17.084 14.296 18.3242C17.4705 19.563 17.4705 19.149 18.0422 19.0961C18.6146 19.045 19.9381 18.3477 20.1484 17.626C20.4088 16.9008 20.4088 16.2782 20.331 16.1491Z" fill="#44565D"/>
+                        </svg>
+                    </a>
                 </div>
             </div>
+            <div class="contacts__menu__schedule">
+                <p class="footer__text contacts__menu__text">Режим работы<br><b>ПН-ПТ: 09:00-21:00,</b> <span>СБ-ВС: 09:30-20:00</span></p>
+            </div>
+            <div class="footer__tel-box contacts__menu__tel-box">
+                <p class="footer__text contacts__menu__text">Телефон:<br><span>+7 900 855-5656</span></p>
+                <a href="tel:+79008555656" class="footer__call-button">Заказать звонок</a>
+            </div>
         </div>
-        <div class="building__month">
-            <h2 class="building__month__title">Октябрь 2023</h2>
-            <div class="building__month__content">
-                <div class="building__month__column">
-                    <iframe src="https://www.youtube.com/embed/quRp4RTfqTI?si=NfTbkrFhbSi3Dt7w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <div class="building__month__small-box">
-                        <img src="imgs/photo-2.png" alt="img" class="bulding__month__img" data-fancybox="oct23">
-                        <img src="imgs/photo-3.png" alt="img" class="bulding__month__img" data-fancybox="oct23">
-                    </div>
-                </div>
-                <div class="building__month__column">
-                    <div class="building__month__small-box">
-                        <img src="imgs/photo-2.png" alt="img" class="bulding__month__img" data-fancybox="oct23">
-                        <img src="imgs/photo-3.png" alt="img" class="bulding__month__img" data-fancybox="oct23">
-                    </div>
-                    <img src="imgs/photo-1.png" alt="img" data-fancybox="oct23">
-                </div>
+        <div class="contacts__content">
+            <div class="contacts__content__photos">
+                <img src="imgs/contacts-photo-1.png" alt="photo" class="contacts__content__photo" data-fancybox="photos">
+                <img src="imgs/contacts-photo-2.png" alt="photo" class="contacts__content__photo" data-fancybox="photos">
+            </div>
+            <img src="imgs/contacts-map.png" alt="map" class="contacts__content__map">
+            <div class="contacts__content__clouds">
+                <img src="imgs/advantages-cloud-1.png" alt="cloud" class="contacts__content__cloud" loading="lazy">
+                <img src="imgs/advantages-cloud-1.png" alt="cloud" class="contacts__content__cloud" loading="lazy">
+                <img src="imgs/advantages-cloud-1.png" alt="cloud" class="contacts__content__cloud" loading="lazy">
+                <img src="imgs/advantages-cloud-1.png" alt="cloud" class="contacts__content__cloud" loading="lazy">
+                <img src="imgs/advantages-cloud-1.png" alt="cloud" class="contacts__content__cloud" loading="lazy">
+                <img src="imgs/advantages-cloud-1.png" alt="cloud" class="contacts__content__cloud" loading="lazy">
+                <img src="imgs/advantages-cloud-1.png" alt="cloud" class="contacts__content__cloud" loading="lazy">
             </div>
         </div>
     </section>
