added 404 page and ipoteka

--- a/404.html
+++ b/404.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-    <script src="scripts/jquery.inputmask.min.js"></script>
-    <script src="scripts/contacts.js"></script>
+    <script src="scripts/404.js"></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <link rel="stylesheet" href="styles/style.css">
-    
-    <title>Контакты</title>
 </head>
 <body>
     <header class="header header-inner">
@@ -110,117 +106,28 @@
         <img src="imgs/svg/up.svg" alt="up">
     </div>
     <div class="nav-chain">
-        <a class="nav-chain__back" href="/">Главная   >  </a><a class="nav-chain__select" href="#">Контакты</a>
+        <a class="nav-chain__back" href="/">Главная   >  </a><a class="nav-chain__select" href="#">Страница не найдена</a>
     </div>
-    <section class="contacts">
-        <h1 class="section-title contacts__title">Контакты</h1>
-        <div class="footer__content contacts__menu">
-            <div class="contacts__menu__address">
-                <p class="footer__text contacts__menu__text">Офис продаж:<br><b>ул. Энгельса, 4</b></p>
-            </div>
-            <div class="footer__socials contacts__menu__socials">
-                <p class="footer__text contacts__menu__text">Мы в социальных сетях:</p>
-                <div>
-                    <a href="#" class="footer__socials__element footer__socials__element_vk">
-                        <svg width="30" height="17" viewBox="0 0 30 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5389 2.04669C10.9245 2.22951 11.8242 2.13438 12.1473 3.24902C12.4384 4.25309 12.4265 6.65432 12.2015 7.77201C11.5793 10.8628 8.95285 5.97433 8.30444 4.90049C7.96876 4.34441 7.38474 3.07612 7.12522 2.45732C6.67752 1.38958 5.60416 1.617 4.32488 1.617C3.84363 1.617 3.51875 1.66104 3.06468 1.66009C2.35418 1.65837 0.978882 1.52245 0.978882 2.17556C0.978882 2.67521 1.2652 3.17448 1.48577 3.6078L2.67424 5.95584C2.8819 6.35045 3.07239 6.74602 3.30704 7.13472L3.95276 8.25775C5.65333 11.0343 7.69651 14.2911 10.7562 15.7954C13.0753 16.9356 14.1668 16.9125 16.7095 16.9125C17.1054 16.9125 17.6026 16.6994 17.7401 16.4278C17.9078 16.0964 17.8907 15.5482 17.9273 15.109C18.017 14.0391 18.5426 12.6271 19.8132 13.5C20.4151 13.9137 21.1466 14.8771 21.6959 15.4195C21.9936 15.7133 22.3538 16.098 22.6881 16.329C22.8593 16.4474 23.1428 16.6182 23.3198 16.6927C24.3704 17.135 25.577 16.9122 26.878 16.9125C27.6001 16.9127 28.8588 17.0306 29.4675 16.6371C30.4325 16.0131 29.4675 14.8981 28.9205 14.2057C28.6079 13.8104 27.4023 12.5476 26.9754 12.1759C24.181 9.74298 24.7402 10.1374 27.6354 6.31862C28.2427 5.51738 29.8764 3.41792 29.8764 2.30443C29.8764 1.72071 29.2507 1.67076 28.7824 1.62158C28.5416 1.59641 28.4747 1.65856 28.2269 1.66161C27.4572 1.67114 23.9522 1.5783 23.5137 1.72776C23.2305 1.82441 23.0695 2.11246 22.9544 2.37782C22.3031 3.87735 21.8591 4.91002 20.9251 6.3007C20.547 6.86364 19.336 8.7492 18.578 8.7492C18.0351 8.7492 17.8394 7.67994 17.8394 7.1595C17.8394 5.58105 17.9263 4.141 17.9263 2.60525C17.9263 2.27831 17.8548 1.93555 17.7461 1.70927C17.2712 0.72064 14.685 0.929575 13.4939 0.929575C12.6336 0.929575 11.2465 1.01765 10.7109 1.70107C10.6276 1.80764 10.5543 1.86464 10.5389 2.04669Z" fill="#44565D"/>
-                        </svg>                                    
-                    </a>
-                    <a href="#" class="footer__socials__element footer__socials__element_tg">
-                        <svg width="67" height="62" viewBox="0 0 67 62" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g filter="url(#filter0_d_1495_4)">
-                                <path d="M30.5946 34.4995L30.1479 40.6418C30.787 40.6418 31.0637 40.3734 31.3956 40.0511L34.3915 37.2517L40.5994 41.6967C41.738 42.3171 42.5401 41.9904 42.8472 40.6726L46.9221 22.0035L46.9232 22.0024C47.2844 20.3568 46.3146 19.7133 45.2053 20.117L21.2535 29.0831C19.6188 29.7035 19.6436 30.5945 20.9756 30.9982L27.0991 32.8605L41.3228 24.1584C41.9922 23.725 42.6009 23.9648 42.1002 24.3982L30.5946 34.4995Z" fill="#44565D"></path>
-                            </g>
-                            <defs>
-                                <filter id="filter0_d_1495_4" x="0" y="0" width="67" height="62" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                    <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
-                                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"></feColorMatrix>
-                                    <feOffset></feOffset>
-                                    <feGaussianBlur stdDeviation="10"></feGaussianBlur>
-                                    <feComposite in2="hardAlpha" operator="out"></feComposite>
-                                    <feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 1 0"></feColorMatrix>
-                                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1495_4"></feBlend>
-                                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1495_4" result="shape"></feBlend>
-                                </filter>
-                            </defs>
-                        </svg>                                 
-                    </a>
-                </div>
-            </div>
-            <div class="contacts__menu__schedule">
-                <p class="footer__text contacts__menu__text">график работы:<br><b>пн-пт 9-18.00,</b> <span>Сб 10.00-16.00</span></p>
-            </div>
-            <div class="footer__tel-box contacts__menu__tel-box">
-                <p class="footer__text contacts__menu__text">Телефон:<br><span>+7 (351) 245-15-15</span></p>
-                <a href="tel:+73512451515" class="footer__call-button">Заказать звонок</a>
-            </div>
+    <section class="page-404">
+        <div class="page-404__img-box">
+            <img src="imgs/screen-house.png" alt="">
         </div>
-        <img src="imgs/contacts-bg.png" alt="house" class="contacts__content__house">
-        <div class="contacts__content">
-            <div class="contacts__content__photos">
-                <a href="imgs/contacts-photo-1.png" data-fancybox="photos">
-                    <img src="imgs/contacts-photo-1.png" alt="photo" class="contacts__content__photo">
-                </a>
-
-                <img src="imgs/contacts-photo-2.png" alt="photo" class="contacts__content__photo" data-fancybox="photos">
-            </div>
-            <img src="imgs/contacts-map.png" alt="map" class="contacts__content__map">
-            <div class="contacts__content__clouds">
-                <img src="imgs/advantages-cloud-1.png" alt="cloud" class="contacts__content__cloud" loading="lazy">
-                <img src="imgs/advantages-cloud-1.png" alt="cloud" class="contacts__content__cloud" loading="lazy">
-                <img src="imgs/advantages-cloud-1.png" alt="cloud" class="contacts__content__cloud" loading="lazy">
-            </div>
-        </div>
-    </section>
-    <section class="sales-department">
-        <h1 class="section-title sales-department__title">отдел продаж</h1>
-        <div class="sales-department__content">
-            <div class="sales-department__card">
-                <div class="sales-department__card__text-box">
-                    <p class="sales-department__card__text">данилова Наталья менеджер отдела продаж danilova@simfonia.ru</p>
-                </div>
-            </div>
-            <div class="sales-department__card">
-                <div class="sales-department__card__text-box">
-                    <p class="sales-department__card__text">данилова Наталья менеджер отдела продаж danilova@simfonia.ru</p>
-                </div>
-            </div>
-            <div class="sales-department__card">
-                <div class="sales-department__card__text-box">
-                    <p class="sales-department__card__text">данилова Наталья менеджер отдела продаж danilova@simfonia.ru</p>
-                </div>
-            </div>
-            <div class="sales-department__card">
-                <div class="sales-department__card__text-box">
-                    <p class="sales-department__card__text">иванов владимир менеджер отдела продаж ivanov@simfonia.ru</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="album album_callback">
-        <h1 class="section-title album__title album__title_callback">заказать обратный звонок</h1>
-        <form action="#" class="album__form album__form_callback">
-            <div class="album__form__content album__form__content_callback">
-                <input class="album__input album__input_email" type="text" placeholder="ваше имя">
-                <input class="album__input album__input_tel" type="tel" placeholder="телефон">
-                <button class="album__form__button">заказать</button>
-                <p class="album__form__warning album__form__warning_callback">нажимая кнопку «заказать», вы принимаете условия передачи указанной информации</p>
-            </div>
-        </form>
-        <div class="album__desktop album__desktop_callback">
-            <img src="imgs/advantages-cloud-1.png" alt="cloud" class="album__desktop__cloud">
-            <img src="imgs/advantages-cloud-1.png" alt="cloud" class="album__desktop__cloud">
-            <img src="imgs/advantages-cloud-1.png" alt="cloud" class="album__desktop__cloud">
-            <img src="imgs/advantages-cloud-1.png" alt="cloud" class="album__desktop__cloud">
-            <img src="imgs/advantages-cloud-1.png" alt="cloud" class="album__desktop__cloud">
-            <img src="imgs/advantages-cloud-2.png" alt="cloud" class="album__desktop__cloud">
-            <img src="imgs/advantages-cloud-1.png" alt="cloud" class="album__desktop__cloud">
-            <img src="imgs/advantages-cloud-2.png" alt="cloud" class="album__desktop__cloud">
+        <h1>СТРАНИЦА НЕ НАЙДЕНА</h1>
+        <p>404</p>
+        <div class="page-404__menu">
+            <h2>вы можете перейти</h2>
+            <nav>
+                <a href="#">назад</a>
+                <a href="#">квартиры</a>
+                <a href="#">ипотека</a>
+                <a href="#">новости</a>
+                <a href="#">на главную</a>
+            </nav>
         </div>
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
-            <h1 class="section-title footer__title">Контакты</h1>
+            <h2 class="section-title">Контакты</h2>
             <div>
                 <div>
                     <img src="imgs/footer-img.png" alt="img" class="footer__img" loading="lazy">
