added catalog and card of apartment

--- a/building-progress.html
+++ b/building-progress.html
@@ -196,7 +196,7 @@
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
-            <h1 class="section-title footer__title">Контакты</h1>
+            <2 class="section-title footer__title">Контакты</h2>
             <div>
                 <div>
                     <img src="imgs/footer-img.png" alt="img" class="footer__img" loading="lazy">
