--- a/news.html
+++ b/news.html
@@ -213,27 +213,27 @@
                 </div>
             </a>
         </div>
-        <div class="news-content__show-more">
-            <button class="news-content__show-more__button">
+        <div class="section-box show-more">
+            <button>
                 Показать еще...
                 <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.29861 3.47366H8.75897L6.37564 1.10648C6.11993 0.852417 6.11993 0.438602 6.37564 0.184509C6.62327 -0.0618284 7.05609 -0.0618284 7.3039 0.184509L10.8077 3.66487C10.9317 3.78796 11 3.95177 11 4.1259C11 4.30012 10.9317 4.46393 10.8077 4.58702L7.30409 8.0672C7.05628 8.31354 6.62402 8.31391 6.37564 8.0672C6.11993 7.81304 6.11993 7.39932 6.37564 7.14514L8.75897 4.77777H5.29861C3.10099 4.77777 1.31292 6.55384 1.31292 8.73671C1.31292 10.9198 3.10099 12.6956 5.29861 12.6956H7.17422C7.48503 12.6956 7.73691 12.946 7.73691 13.2546V13.4409C7.73691 13.7496 7.48503 13.9998 7.17422 13.9998H5.29861C2.37704 13.9998 0 11.6388 0 8.73671C0 5.83475 2.37704 3.47366 5.29861 3.47366Z" fill="#8FA7B1"/>
                     <path d="M15.7014 13.5259L12.241 13.5259L14.6244 15.893C14.8801 16.1471 14.8801 16.5609 14.6244 16.815C14.3767 17.0613 13.9439 17.0613 13.6961 16.815L10.1923 13.3346C10.0683 13.2116 10 13.0477 10 12.8736C10 12.6994 10.0683 12.5356 10.1923 12.4125L13.6959 8.93231C13.9437 8.68598 14.376 8.68561 14.6244 8.93231C14.8801 9.18647 14.8801 9.60019 14.6244 9.85437L12.241 12.2217L15.7014 12.2217C17.899 12.2217 19.6871 10.4457 19.6871 8.2628C19.6871 6.07975 17.899 4.30387 15.7014 4.30387L13.8258 4.30387C13.515 4.30387 13.2631 4.05353 13.2631 3.74495L13.2631 3.55864C13.2631 3.24991 13.515 2.99976 13.8258 2.99976L15.7014 2.99976C18.623 2.99976 21 5.36075 21 8.2628C21 11.1648 18.623 13.5259 15.7014 13.5259Z" fill="#8FA7B1"/>
                 </svg>                                     
             </button>
-            <div class="news-content__show-more__pages">
-                <button class="news-content__show-more__back news-content__show-more__back_disabled">
+            <div>
+                <button class="next-back-disabled">
                     <svg width="7" height="11" viewBox="0 0 7 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5.33999 11L6.9255 9.34757L1.77259 3.97718L0.18708 5.62961L5.33999 11Z" fill="#9AB2BC"/>
                         <path d="M7.00003 1.65243L5.41452 -1.89067e-08L6.6184e-08 5.44993L1.58551 7.10236L7.00003 1.65243Z" fill="#9AB2BC"/>
                     </svg>                        
                 </button>
-                <a href="#" class="news-content__show-more__page news-content__show-more__page_selected">1</a>
-                <a href="#" class="news-content__show-more__page">2</a>
-                <a href="#" class="news-content__show-more__page">3</a>
+                <a href="#" class="page-selected">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
                 <p>. . .</p>
-                <a href="#" class="news-content__show-more__last-page">58</a>
-                <button class="news-content__show-more__next news-content__show-more__next">
+                <a href="#">58</a>
+                <button>
                     <svg width="7" height="11" viewBox="0 0 7 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5.33999 11L6.9255 9.34757L1.77259 3.97718L0.18708 5.62961L5.33999 11Z" fill="#9AB2BC"/>
                         <path d="M7.00003 1.65243L5.41452 -1.89067e-08L6.6184e-08 5.44993L1.58551 7.10236L7.00003 1.65243Z" fill="#9AB2BC"/>
@@ -243,7 +243,7 @@
         </div>
     </section>
     <section class="album album_callback">
-        <h1 class="section-title album__title album__title_callback">заказать обратный звонок</h1>
+        <h2 class="section-title album__title album__title_callback">заказать обратный звонок</h2>
         <form action="#" class="album__form album__form_callback">
             <div class="album__form__content album__form__content_callback">
                 <input class="album__input album__input_email" type="text" placeholder="ваше имя">
@@ -265,7 +265,7 @@
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
-            <h1 class="section-title footer__title">Контакты</h1>
+            <h2 class="section-title footer__title">Контакты</h2>
             <div>
                 <div>
                     <img src="imgs/footer-img.png" alt="img" class="footer__img" loading="lazy">
